--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Iris</title>
+<style>
+   h1 {
+         color:red
+}
 </head>
 <body>
     <form action="{{ url_for('predict')}}" method="POST">
@@ -13,6 +17,6 @@
       
         <input type=submit    value=Submit>
     </form>
-    My prediction: {{ predict }}
+    <h1>My prediction: {{ predict }}<h1>
 </body>
 </html>
